# log_dra

./: .gitignore  Dockerfile  README.md  column_names.py  log.py  main.ipynb  map_tools.py  performance_analysis.py  plotting.ipynb  readme.py  report.ipynb  requirements.txt  setup.cfg  sheets.py  test.ipynb  ui.py  value_replacement.py
data/: rolling_stock.xlsx
data/performance_stats/: or_hk_20230301_20230401.xlsx  or_hk_20230501_20230522x.xlsx  or_pha_20230201_20230301.xlsx  or_pha_20230301_20230401.xlsx  sszt_kv_20230101_20230201.xlsx  sszt_kv_20230401_20230501.xlsx  sszt_ol_20230201_20230301.xlsx  sszt_ol_20230301_20230401.xlsx  sszt_ol_20230501_20230601.xlsx
data/processed/legacy/: 202301.parquet  202302.parquet
data/raw/xlsx/2023/01/: or_hk_20230101_20230201.xlsx  or_pha_20230101_20230201.xlsx  sszt_ol_20230101_20230201.xlsx
data/raw/xlsx/2023/02/: or_hk_20230201_20230301.xlsx  sszt_kv_20230201_20230301.xlsx
data/raw/xlsx/2023/03/: sszt_kv_20230301_20230401.xlsx
data/raw/xlsx/2023/04/: or_hk_20230401_20230501.xlsx  or_pha_20230401_20230501.xlsx  sszt_ol_20230401_20230501.xlsx
data/raw/xlsx/2023/05/: or_pha_20230501_20230601.xlsx  (+1 more)
doc/: pipeline.puml  pipeline_logic.puml
src/log_dra/config/: paths.py  pipeline_logging_config.py  value_replacement.py
src/log_dra/constants/: column_names.py
src/log_dra/gui/: main_window.ui
src/log_dra/jupyter/: errors.py  main.ipynb  map_tools.py  ui.py
src/log_dra/pipeline/: analyse.py  compare.py  convert.py  merge.py  run.py
src/log_dra/pipeline/performance/: performance.py  readme.py  sheets.py
(+54 files in other folders)
