[metadata]
name = log_dra
description = Tools for analyzing DRA GDS exported .xlsx data and creating reports
author = Vilém Pecen
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    log_dra
install_requires =
    pandas
    pyarrow
    openpyxl
    geopandas
    voila
    ipyfilechooser
    ipywidgets
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
